# os0-libc

./: .gitignore  config.h.in  machine.sh  meson.build
arch/i386/: crt0.S  ioctl.S  longjmp.S  memchr.S  memcmp.S  meson.build  open.S  syscall.S
arch/i386/rtld/: api.c  load.c  main.c  meson.build
config/: i686-pc-elf.conf  i686-pc-oszero0.0.1.conf
include/: _limits.h  alloca.h  assert.h  complex.h  ctype.h  dirent.h  dlfcn.h  err.h  errno.h  fcntl.h  fts.h  getopt.h  grp.h  inttypes.h.in  langinfo.h  libgen.h  locale.h  math.h  memory.h  meson.build  mntent.h  nl_types.h  paths.h  pwd.h  regex.h  setjmp.h  signal.h  stdint.h.in  stdio.h  stdlib.h  string.h  strings.h  termios.h  time.h  unistd.h  utime.h  utmp.h  wchar.h  wctype.h
include/bits/: getopt.h  meson.build  wctype.h
include/bits/types/: div.h  file.h  fpos.h  lconv.h  locale.h  mbstate.h  meson.build
include/sys/: cdefs.h  errno.h  io.h  ioctl.h  meson.build  mman.h  mount.h  queue.h  random.h  resource.h  socket.h  stat.h  statfs.h  statvfs.h  syscall.h  sysmacros.h  time.h  times.h  types.h  uio.h  utsname.h  wait.h  xattr.h
locale/: ctype.c  langinfo.c  localeconv.c  posix.c  setlocale.c  uselocale.c
math/: cos.S  meson.build  sin.S  tan.S  wrapper.c
private-include/: branch.h  jmpbuf.h  libc-locale.h  locks.h  rtld.h  setup.h  stream.h  strtol.h  symbol.h  syscall.h
regex/: cclass.h  cname.h  engine.c  regcomp.c  regerror.c  regex2.h  regexec.c  regfree.c
rt/: crt0.S  meson.build  rtld-load.c  rtld-main.c  rtld-print.c  rtld-syscall.S  rtld.c
rtld/: api.c  libdl.c  load.c  lookup.c  main.c  malloc.S  meson.build  plt.S  print.c  queue.c  reloc.c  remap.c  string.c  syscall.S
stdio/: asprintf.c  err.c  ferror.c  fflush.c  fgetc.c  fgets.c  fgetwc.c  fgetws.c  fio.c  flockfile.c  fopen.c  fpos.c  fprintf.c  fputc.c  fputs.c  fputwc.c  fputws.c  fwide.c  getdelim.c  perror.c  popen.c  printf.c  scanf.c  setvbuf.c  sprintf.c  stdstr.c  stream.c  tmpnam.c  vfprintf.c  vscanf.c  vsprintf.c  vxprintf.c
stdlib/: abort.c  assert.c  bitsearch.c  bsearch.c  crt0.S  ctype.c  cxxabi.c  dirent.c  dlmalloc.c  env.c  errno.c  exec.c  exit.c  fts.c  fts64.c  getopt.c  grp.c  init.c  isatty.c  killpg.c  locale.c  locks.c  login.c  longjmp.S  lsearch.c  malloc.c  mktemp.c  mntent.c  passwd.c  pathname.c  qsort.c  rand.c  realpath.c  regex.c  setjmp.c  sigjmp.c  signal.c  sigset.c  sigsetjmp.S  sleep.c  (+7 more)
string/: atol.c  bset.c  fstrtol_l.c  memcmp.c  memcpy.S  memcpy.c  memmove.S  memset.S  memset.c  strcasestr.c  strcat.c  strcmp.c  strcpy.c  strerror.c  strftime.c  string.c  strlen.c  strpbrk.c  strptime.c  strsep.c  strsignal.c  strspn.c  strstr-util.h  strstr.c  strtod.c  strtod_l.c  strtok.c  strtol.c  strtol_l.c
syscall/: access.S  access.c  brk.S  chdir.S  chdir.c  chmod.S  chmod.c  chown.S  chown.c  clock.c  close.S  close.c  creat.c  dup.c  execve.S  execve.c  exit.S  exit.c  fcntl.S  fork.S  fork.c  getcwd.c  getrandom.c  getrusage.c  gettimeofday.S  gettimeofday.c  groups.c  io.S  io.c  ioctl.S  itimer.c  kill.S  kill.c  link.S  link.c  lseek.S  lseek.c  mkdir.S  mkdir.c  mknod.S  (+41 more)
termios/: cfmakeraw.c  cfspeed.c  tcattr.c  tcflush.c  tcpgrp.c  ttyname.c
wchar/: btowc.c  ctype.c  mbrlen.c  mbrtowc.c  mbsinit.c  mbsrtowcs.c  wcrtomb.c  wcscat.c  wcscmp.c  wcscpy.c  wcslen.c  wcspbrk.c  wcsrtombs.c  wcsspn.c  wcsstr.c  wcstok.c  wctob.c  wctype.c  wcwidth.c
